--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
         android:theme="@style/Theme.ProjektPUM"
         tools:targetApi="31">
         <activity
+            android:name=".GalleryActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat" />
+        <activity
             android:name=".MusicPlayer"
             android:exported="false"
             android:theme="@style/Theme.AppCompat" />
